-
Bug
-
Resolution: Fixed
-
P2: Important
-
None
-
6.6
-
None
-
88d700bcc (dev)
Changing the minimum range moves the surface model
- is required for
-
QTBUG-114463 Match or exceed the visual quality of QtDataVisualization
-
- Closed
-
1.
|
Fix axis ranges in surfacegraph |
![]() |
Closed | Kwanghyo Park |
2.
|
Fix axis ranges in barsgraph |
![]() |
Closed | Dilek Akcay |
For Gerrit Dashboard: QTBUG-111056 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
469273,4 | Hide scatter graph data points | dev | qt/qtgraphs | Status: MERGED | +2 | 0 |