Hide scatter graph data points

Hide scatter graph datapoints that are outside
of axis range.

Task-number: QTBUG-111056
Change-Id: I91118e19abb09d88889914271853206c6f4285e2
Reviewed-by: Kwanghyo Park <kwanghyo.park@qt.io>
Reviewed-by: Tomi Korpipää <tomi.korpipaa@qt.io>